--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.8",
     "multer": "^1.4.2",
-    "next": "9.5.3",
+    "next": "^9.5.5",
     "next-connect": "^0.9.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "sass": "^1.29.0",
     "swr": "^0.3.5",
+    "tailwindcss": "^3.1.8",
     "validator": "^13.1.17"
   }
 }
