--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
+    "@heroicons/react": "^2.0.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "bcryptjs": "^2.4.3",
@@ -27,7 +29,11 @@
     "react-icons": "^3.11.0",
     "sass": "^1.29.0",
     "swr": "^0.3.5",
-    "tailwindcss": "^3.1.8",
     "validator": "^13.1.17"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.11",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^2.2.19"
   }
 }
