--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
     "connect-mongo": "^3.2.0",
+    "cssnano": "^5.1.13",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.8",
@@ -29,11 +30,9 @@
     "react-icons": "^3.11.0",
     "sass": "^1.29.0",
     "swr": "^0.3.5",
+    "tailwindcss": "^3.1.8",
     "validator": "^13.1.17"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.4.11",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^2.2.19"
-  }
+  "devDependencies": {},
+  "peerDependencies": {}
 }
