--- a/package.json
+++ b/package.json
@@ -15,24 +15,26 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
     "connect-mongo": "^3.2.0",
-    "cssnano": "^5.1.13",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.8",
     "multer": "^1.4.2",
-    "next": "^9.5.5",
+    "next": "^11.1.4",
     "next-connect": "^0.9.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "sass": "^1.29.0",
     "swr": "^0.3.5",
-    "tailwindcss": "^3.1.8",
     "validator": "^13.1.17"
   },
-  "devDependencies": {},
-  "peerDependencies": {}
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "cssnano": "^5.1.7",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
+  }
 }
