--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^1.23.0",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
+    "gapi-script": "^1.2.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.8",
     "multer": "^1.4.2",
@@ -28,6 +29,7 @@
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^3.11.0",
     "sass": "^1.29.0",
     "swr": "^0.3.5",
