--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.10.8",
     "multer": "^1.4.2",
     "next": "^11.1.4",
+    "next-auth": "^4.15.0",
     "next-connect": "^0.9.0",
     "next-session": "^3.3.2",
     "passport": "^0.4.1",
