--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^3.11.0",
+    "react-router-dom": "^6.4.2",
     "sass": "^1.29.0",
     "swr": "^0.3.5",
     "validator": "^13.1.17"
